packages/docs/versioned_docs/version-4.7.1/api/MasonryInfiniteGridOptions.mdx
---
custom_edit_url: null
---

<div>

</div>

**Type**: TSInterface

|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|horizontal|boolean|<p>Direction of the scroll movement. (true: horizontal, false: vertical) If horizontal is false, <code>inlinePos</code> is left, <code>inlineSize</code> is width, <code>contentPos</code> is top, and <code>contentSize</code> is height. If horizontal is true, <code>inlinePos</code> is top, <code>inlineSize</code> is height, <code>contentPos</code> is left, and <code>contentSize</code> is width.<br /></p>|
|percentage|Array&lt;"position" \| "size"&gt; \| boolean|<p>Whether to set the css size and position of the item to %.<br /></p>|
|isEqualSize|boolean|<p>Indicates whether sizes of all card elements are equal to one another. If sizes of card elements to be arranged are all equal and this option is set to &quot;true&quot;, the performance of layout arrangement can be improved.<br /></p>|
|isConstantSize|boolean|<p>Indicates whether sizes of all card elements does not change, the performance of layout arrangement can be improved.<br /></p>|
|gap|number|<p>Gap used to create space around items.<br /></p>|
|attributePrefix|string|<p>The prefix to use element's data attribute.<br /></p>|
|resizeDebounce|number|<p>Debounce time to set in the resize event. (unit: ms)<br /></p>|
|maxResizeDebounce|number|<p>Maximum time to debounce the resize event. (0 is not set)<br /></p>|
|autoResize|boolean|<p>Whether the resize method should be called automatically after a window resize event.<br /></p>|
|useFit|boolean|<p>Whether to move the outline to 0 when the top is empty when rendering. However, if it overflows above the top, the outline is forced to 0.<br /></p>|
|useTransform|boolean|<p>Whether to use transform property instead of using left and top css properties.<br /></p>|
|renderOnPropertyChange|boolean|<p>Whether to automatically render through property change.<br /></p>|
|preserveUIOnDestroy|boolean|<p>Whether to preserve the UI of the existing container or item when destroying.<br /></p>|
|defaultDirection|"start" \| "end"|<p>The default direction value when direction is not set in the render option.<br /></p>|
|outlineLength|number|<p>The number of outlines. If the number of outlines is 0, it is calculated according to the type of grid.<br /></p>|
|outlineSize|number|<p>The size of the outline. If the outline size is 0, it is calculated according to the grid type.<br /></p>|
|useRoundedSize|boolean|<p>Whether to get the size as rounded size(offsetWidth, offsetHeight). Set to true if transform is applied to the container. If false, get the size through getBoundingClientRect.<br /></p>|
|useResizeObserver|boolean|<p>Whether to use ResizeObserver event to detect container size change when <code>autoResize</code> option is used.<br /></p>|
|observeChildren|boolean|<p>Whether to detect size change of children if useResizeObserver option is used.<br /></p>|
|externalItemRenderer|ItemRenderer \| null|<p>You can set the ItemRenderer directly externally.<br /></p>|
|externalContainerManager|ContainerManager \| null|<p>You can set the ContainerManager directly externally.<br /></p>|
|column|number|<p>The number of columns. If the number of columns is 0, it is automatically calculated according to the size of the container. Can be used instead of outlineLength. (default: 0)</p>|
|columnSize|number|<p>The size of the columns. If it is 0, it is calculated as the size of the first item in items. Can be used instead of outlineSize. (default: 0) </p>|
|columnSizeRatio|number|<p>The size ratio(inlineSize / contentSize) of the columns. 0 is not set. (default: 0) </p>|
|align|GridAlign|<p>Align of the position of the items. If you want to use <code>stretch</code>, be sure to set <code>column</code>, <code>columnSize</code> or <code>maxStretchColumnSize</code> option. (&quot;start&quot;, &quot;center&quot;, &quot;end&quot;, &quot;justify&quot;, &quot;stretch&quot;) (default: &quot;justify&quot;) </p>|
|columnCalculationThreshold|number|<p>Difference Threshold for Counting Columns. Since offsetSize is calculated by rounding, the number of columns may not be accurate. (default: 1) </p>|
|maxStretchColumnSize|number|<p>If stretch is used, the column can be automatically calculated by setting the maximum size of the column that can be stretched. (default: Infinity) </p>|
|horizontal|boolean|<p>Direction of the scroll movement. (true: horizontal, false: vertical) If horizontal is false, <code>inlinePos</code> is left, <code>inlineSize</code> is width, <code>contentPos</code> is top, and <code>contentSize</code> is height. If horizontal is true, <code>inlinePos</code> is top, <code>inlineSize</code> is height, <code>contentPos</code> is left, and <code>contentSize</code> is width.<br /></p>|
|percentage|Array&lt;"position" \| "size"&gt; \| boolean|<p>Whether to set the css size and position of the item to %.<br /></p>|
|isEqualSize|boolean|<p>Indicates whether sizes of all card elements are equal to one another. If sizes of card elements to be arranged are all equal and this option is set to &quot;true&quot;, the performance of layout arrangement can be improved.<br /></p>|
|isConstantSize|boolean|<p>Indicates whether sizes of all card elements does not change, the performance of layout arrangement can be improved.<br /></p>|
|gap|number|<p>Gap used to create space around items.<br /></p>|
|attributePrefix|string|<p>The prefix to use element's data attribute.<br /></p>|
|resizeDebounce|number|<p>Debounce time to set in the resize event. (unit: ms)<br /></p>|
|maxResizeDebounce|number|<p>Maximum time to debounce the resize event. (0 is not set)<br /></p>|
|autoResize|boolean|<p>Whether the resize method should be called automatically after a window resize event.<br /></p>|
|useFit|boolean|<p>Whether to move the outline to 0 when the top is empty when rendering. However, if it overflows above the top, the outline is forced to 0.<br /></p>|
|useTransform|boolean|<p>Whether to use transform property instead of using left and top css properties.<br /></p>|
|renderOnPropertyChange|boolean|<p>Whether to automatically render through property change.<br /></p>|
|preserveUIOnDestroy|boolean|<p>Whether to preserve the UI of the existing container or item when destroying.<br /></p>|
|defaultDirection|"start" \| "end"|<p>The default direction value when direction is not set in the render option.<br /></p>|
|outlineLength|number|<p>The number of outlines. If the number of outlines is 0, it is calculated according to the type of grid.<br /></p>|
|outlineSize|number|<p>The size of the outline. If the outline size is 0, it is calculated according to the grid type.<br /></p>|
|useRoundedSize|boolean|<p>Whether to get the size as rounded size(offsetWidth, offsetHeight). Set to true if transform is applied to the container. If false, get the size through getBoundingClientRect.<br /></p>|
|useResizeObserver|boolean|<p>Whether to use ResizeObserver event to detect container size change when <code>autoResize</code> option is used.<br /></p>|
|observeChildren|boolean|<p>Whether to detect size change of children if useResizeObserver option is used.<br /></p>|
|externalItemRenderer|ItemRenderer \| null|<p>You can set the ItemRenderer directly externally.<br /></p>|
|externalContainerManager|ContainerManager \| null|<p>You can set the ContainerManager directly externally.<br /></p>|
|container|boolean \| HTMLElement \| string \| Ref&lt;HTMLElement&gt;|<p>The target to which the container is applied. If false, create itself, if true, create container. A string or HTMLElement specifies the target directly.</p>|
|containerTag|string|<p>If you create a container, you can set the container's tag.</p>|
|threshold|number|<p>The size of the scrollable area for adding the next group of items.</p>|
|useRecycle|boolean|<p>Whether to show only the DOM of the visible area.</p>|
|scrollContainer|HTMLElement \| string \| Ref&lt;HTMLElement&gt; \| null|<p>You can set the scrollContainer directly. In this case, the container becomes the wrapper itself.</p>|
|gridConstructor|GridFunction|<p>Grid class to apply Infinite function.</p>|
|renderer|Renderer \| null|<p>class that renders the DOM.</p>|

